RESOLVED FIXED214621
[Cocoa] canPlayType with 'codecs' parameter should never return "maybe"
https://bugs.webkit.org/show_bug.cgi?id=214621
Summary [Cocoa] canPlayType with 'codecs' parameter should never return "maybe"
Eric Carlson
Reported 2020-07-21 16:55:35 PDT
HTMLMediaElement.canPlayType() with 'codecs' parameter should never return "maybe"
Attachments
Patch (4.84 KB, patch)
2020-07-21 16:59 PDT, Eric Carlson
no flags
Patch (17.25 KB, patch)
2020-07-22 11:18 PDT, Eric Carlson
no flags
Patch (17.74 KB, patch)
2020-07-22 14:08 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2020-07-21 16:55:54 PDT
Eric Carlson
Comment 2 2020-07-21 16:59:42 PDT
Eric Carlson
Comment 3 2020-07-22 11:18:55 PDT
Eric Carlson
Comment 4 2020-07-22 14:08:54 PDT
EWS
Comment 5 2020-07-22 16:52:53 PDT
Committed r264734: <https://trac.webkit.org/changeset/264734> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404958 [details].
Note You need to log in before you can comment on or make changes to this bug.