[Cocoa] canPlayType with 'codecs' parameter should never return "maybe" https://bugs.webkit.org/show_bug.cgi?id=214621 <rdar://problem/65146785>

Reviewed by Jer Noble.

Source/WebCore:

No new tests, updated existing tests and results.

* platform/graphics/MIMETypeCache.cpp:
(WebCore::MIMETypeCache::canDecodeType):

LayoutTests:

* media/media-can-play-av1-expected.txt:
* media/media-can-play-av1.html:
* media/vp9.html:
* platform/ios/imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/mime-types/canPlayType-expected.txt: Added.
* platform/ios/media/media-can-play-av1-expected.txt: Removed.
* platform/ios/media/media-can-play-wav-audio-expected.txt: Copied from LayoutTests/platform/mac/media/media-can-play-wav-audio-expected.txt.
* platform/mac/imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/mime-types/canPlayType-expected.txt: Added.
* platform/mac/media/media-can-play-av1-expected.txt: Removed.
* platform/mac/media/media-can-play-wav-audio-expected.txt:


Canonical link: https://commits.webkit.org/227473@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264734 268f45cc-cd09-0410-ab3c-d52691b4dbfc